# refjax

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: .example_data.csv  01_basic_usage.py  02_gradients_with_optax.py  03_UQ_with_numpyro.py
src/refjax/: __init__.py  model.py  smear.py  tools.py
test/: test_refjax.py
